Refactor code structure for improved readability and maintainability
Signed-off-by: Benson Osei Mensah <kbenson643@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ packages = ["src/linkedin_mcp"]
 
 [dependency-groups]
 dev = [
+    "black>=26.1",
     "mypy>=1.10",
     "ruff>=0.5",
     "pytest>=8.0",
