--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "LinkedIn Strategic Posting MCP Server"
 requires-python = ">=3.10"
 dependencies = [
     "httpx>=0.27",
+    "loguru>=0.7",
     "mcp[cli]>=1.0.0",
     "pydantic>=2.0",
 ]
@@ -23,8 +24,9 @@ packages = ["src/linkedin_mcp"]
 dev = [
     "black>=26.1",
     "mypy>=1.10",
-    "ruff>=0.5",
     "pytest>=8.0",
+    "pytest-cov>=6.0",
+    "ruff>=0.5",
 ]
 
 [tool.mypy]
