--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,3 +60,9 @@ indent-style = "space"
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 pythonpath = ["src"]
+
+[tool.coverage.report]
+fail_under = 100
+exclude_lines = [
+    "if __name__",
+]
