--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,9 @@ indent-style = "space"
 testpaths = ["tests"]
 pythonpath = ["src"]
 
+[tool.coverage.run]
+source = ["src"]
+
 [tool.coverage.report]
 fail_under = 100
 exclude_lines = [
